# luxtronik2-hass

./: .gitignore  LICENSE  MIGRATION.md  README.de.md  README.md  hacs.json  pyproject.toml
.github/workflows/: validate.yml
custom_components/luxtronik2_hass/: __init__.py  bath_boost.py  button.py  config_flow.py  const.py  coordinator.py  manifest.json  number.py  select.py  sensor.py  smart_energy.py  strings.json  switch.py
custom_components/luxtronik2_hass/translations/: de.json  en.json
docs/examples/: dashboard-bath-boost.yaml  dashboard-heatpump-en.yaml  dashboard-waermepumpe.yaml
tests/: __init__.py
tests/unit/: __init__.py  test_number.py  test_select.py
